Fix footer overflow and padding on mobile

--- a/Front/VSC/contacts.css
+++ b/Front/VSC/contacts.css
@@ -30,7 +30,7 @@ body
 	font-family: 'Montserrat', "Lato", sans-serif;
     line-height: 1.7;
 	color: #777;
-	width: 100vw;
+	min-width: 100vw;
 }
 
 
@@ -171,6 +171,11 @@ body
 	.footer .footer__logo-box
 	{
 		display: flex;
+	}
+
+	.footer__list
+	{
+		padding: 0;
 	}
 }
 
@@ -569,6 +574,7 @@ h1
 
 .footer
 {
+	overflow: hidden;
 	zoom: 80%;
 	background-color: #2f2f2f;
 	padding: 4rem 0 2rem 0;
